[gd_scene load_steps=4 format=3 uid="uid://dm0uk8bw10f5j"]

[ext_resource type="Script" uid="uid://oop33wkod66u" path="res://LoadingScreen.gd" id="1_loading"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0.91, 0.71, 0.19, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="LoadingScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_loading")

[node name="LoadingUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="LoadingUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.07, 0.22, 0.49, 1)

[node name="OverlayTexture" type="TextureRect" parent="LoadingUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="ProgressContainer" type="VBoxContainer" parent="LoadingUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="ProgressLabel" type="Label" parent="LoadingUI/ProgressContainer"]
layout_mode = 2
text = "Loading... 0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="LoadingUI/ProgressContainer"]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_progress")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
step = 1.0
show_percentage = false

[node name="ContinueButton" type="Button" parent="LoadingUI"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue"
